--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 NODE_ENV=production
 
 PORT=8080
+
+DB_USERNAME=postgres
+DB_PASSWORD=password
+DB_NAME=king-of-travel
+DB_HOST=localhost
+DB_DIALECT=postgres
