--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www"
   },
+  "prettier": {
+    "singleQuote": true,
+    "tabWidth": 2
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
