--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "i18n": "^0.8.4",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "pg": "^7.14.0",
     "pg-hstore": "^2.3.3",
