--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-pg-simple": "^6.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-session": "^1.17.0",
     "http-errors": "~1.6.3",
     "i18n": "^0.8.4",
-    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "pg": "^7.14.0",
     "pg-hstore": "^2.3.3",
