--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "express-session": "^1.17.0",
+    "express-validator": "^6.3.0",
     "http-errors": "~1.6.3",
     "i18n": "^0.8.4",
     "morgan": "~1.9.1",
