--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "http-errors": "~1.6.3",
     "i18n": "^0.8.4",
     "morgan": "~1.9.1",
+    "nanoid": "^2.1.8",
     "pg": "^7.14.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.2"
