Rename properties to env config

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
-NODE_ENV=production
+NODE_ENV=development
 
 PORT=8080
 
-DB_USERNAME=postgres
-DB_PASSWORD=password
+DB_ROLE=postgres
 DB_NAME=king-of-travel
-DB_HOST=localhost
+DB_PASSWORD=password
 DB_DIALECT=postgres
 
-TOKEN_SECRET=king-of-travel
+SESSIONS_DB_TABLE=user-sessions
+SESSIONS_SECRET=king-of-travel
